syntax = "proto3";

option go_package=".;pb";

import "story_message.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message CreateStoryRequest{
    Story story = 1;
}

message CreateStoryResponse {
    string id = 1;
}

message Ping {
    string ping = 1;
}

message Pong {
    string ping = 1;
}

message UploadStoryAndFilesReq {
    string id = 1;
    string title =2;
    bytes Content = 3;
    string Filename = 4;
    string Author = 5;
    bool isDraft = 7;
    // Tags for categorizing stories
    repeated Tag Tag = 8;
    // Create time
    google.protobuf.Timestamp createTime = 9;
    // Update time
    google.protobuf.Timestamp updateTime = 10;
}

message UploadStoryAndFilesRes {
    string Message = 1;
    UploadStatusCode Code = 2;
}

enum UploadStatusCode {
    Unknown = 0;
    Ok = 1;
    Failed = 2;
}

service StoryService {

    rpc PingPong(Ping) returns (Pong) {
        option (google.api.http) = { 
            post: "/v1/89minutes/ping"
            body: "*"
        };
    };

    rpc UploadStoryAndFiles(stream UploadStoryAndFilesReq) returns (UploadStoryAndFilesRes) {
        option (google.api.http) = {
            post: "/v1/89minutes/story"
            body: "*"
        };  
    };

    // rpc UpdateStoryAndFiles(stream UploadStoryAndFilesReq) returns (UploadStoryAndFilesRes) {
    //     option (google.api.http) = {
    //         post: "/v1/89minutes/story/{id}"
    //         body: "*"
    //     };  
    // };
}